# FaceFeat

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: roi.py  stream_video.py  video.py
backend/app/core/: config.py  database.py
backend/app/exceptions/: exception.py
backend/app/logging/: logger.py
backend/app/models/: __init__.py  video.py
backend/app/services/: video_processor.py
backend/app/services/face_detection/: __init__.py  config.py  detector.py  drawing.py  landmarker.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 36f2fe28494f_add_facial_landmarks_and_pose_fields.py  59d227fee4fb_add_face_index.py  6945f9d0e968_update_confidence_score_type.py  edfa07214e6c_create_videos_and_video_faces_tables.py
frontend/src/: facefeat.html  style.css
test_outputs/: README
test_outputs/video-face-demographics-walking/: roi.json
test_outputs/video-face-demographics-walking-and-pause/: roi.json
test_outputs/video-head-female/: roi.json
test_outputs/video-head-female-and-male/: roi.json
test_outputs/video-head-male/: roi.json
